WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
282007
[Site isolation] Site isolated frames with css transform are not displayed correctly
https://bugs.webkit.org/show_bug.cgi?id=282007
Summary
[Site isolation] Site isolated frames with css transform are not displayed co...
Said Abou-Hallawa
Reported
2024-10-23 15:24:59 PDT
1. Enable site isolation internal feature 2. Open
https://bug1519412.bmoattachments.org/attachment.cgi?id=9035934
Result: The contents of the cross origin iframe is transformed incorrectly. Expected: The contents of the cross origin iframe should cover the whole site isolated frame.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-10-23 15:25:22 PDT
<
rdar://problem/138513187
>
Said Abou-Hallawa
Comment 2
2024-10-23 16:00:21 PDT
It looks like the problem with the scaling. For a page like this <style> iframe { width: 600px; height: 300px; transform: scale(0.5); transform-origin: 0 0; } </style> <body> <iframe src="
http://localhost:8000/site-isolation/resources/green-background.html
" frameborder=0></iframe> </body> It is expected to render { 300 x 150 } green rectangle for the iframe because its size is { 600 x 300 } and it has transform of scale(0.5). But we end up having { 150 x 75 } green rectangle. So it seems the scaling is applied twice.
Said Abou-Hallawa
Comment 3
2024-10-28 13:56:07 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/35821
EWS
Comment 4
2024-10-29 10:10:04 PDT
Committed
285842@main
(b27e4007cd73): <
https://commits.webkit.org/285842@main
> Reviewed commits have been landed. Closing PR #35821 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug