[Site isolation] Site isolated frames with css transform are not displayed correctly https://bugs.webkit.org/show_bug.cgi?id=282007 rdar://138513187

Reviewed by Sihui Liu.

Similar to the local frame, the size of the remote frame should be set in logical
units.

* LayoutTests/http/tests/site-isolation/iframe-with-transform-expected.html: Added.
* LayoutTests/http/tests/site-isolation/iframe-with-transform.html: Added.
* LayoutTests/http/tests/site-isolation/resources/100x100-blue-box-green-background.html: Added.
* Source/WebCore/rendering/RenderWidget.cpp:
(WebCore::RenderWidget::updateWidgetGeometry):

Canonical link: https://commits.webkit.org/285842@main